3.0.0-SNAPSHOT Removed checkerframework